# todo

./: .env.example  .firebaserc  .gitignore  GETTING_STARTED.md  README.md  RELEASE_CHECKLIST.md  cors.json  firebase.json  firestore.rules  keystore.txt  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.firebase/: hosting.YXBwc1x3ZWJcb3V0.cache
.github/workflows/: cloudflare-deploy.yml  firebase-deploy.yml  generate-keystore.yml  tauri-android.yml  tauri-release.yml
apps/web/: .env.local.example  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: attachment-store.ts  auth-context.tsx  cal-settings.ts  cross-page-ai.ts  data-store.tsx  firebase.ts  firestore.ts  google-calendar.ts  i18n-context.tsx  noah-ai-context.tsx  noah-ai.ts  polar.ts  pomodoro-context.tsx  tauri-download.ts  theme-context.tsx  use-reminders.ts  useAuth.ts
apps/web/public/: mobile-auth.html
apps/web/src-tauri/: Cargo.toml  generate-icon.mjs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json  mobile.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md
functions/: package-lock.json  package.json
functions/src/: gcal-oauth.ts  gemini.ts  index.ts  usage.ts  youtube.ts
functions/src/prompts/: chat.ts  (+12 more)
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_rls_policies.sql  00003_triggers.sql  00004_notes_table.sql
(+50 files in other folders)
